--- a/assets/css/style/_codemirror.scss
+++ b/assets/css/style/_codemirror.scss
@@ -13,7 +13,7 @@
 		background: transparent;
 	}
 
-	body.fullscreen & {
+	.paperscript & {
 		height: 100%;
 	}
 }
